Fixed spacing

--- a/css/agency.css
+++ b/css/agency.css
@@ -240,7 +240,7 @@ header .intro-text .intro-lead-in {
     z-index:3;
     font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-style: italic;
-    font-size: 22px;
+    font-size: 20px;
     line-height: 22px;
     margin-bottom: 25px
 }
@@ -776,7 +776,7 @@ header .intro .intro-heading {
     font-weight: 700;
     font-size: 30px;
     line-height: 50px;
-    margin-bottom: 25px
+    margin-bottom: 10px
 }
 @media (min-width: 768px) {
     header .intro {
@@ -790,7 +790,7 @@ header .intro .intro-heading {
         font-style: italic;
         font-size: 22px;
         line-height: 30px;
-        margin-bottom: 40px
+        margin-bottom: 20px
     }
     header .intro .intro-heading {
         z-index:3;
@@ -799,7 +799,7 @@ header .intro .intro-heading {
         font-weight: 700;
         font-size: 40px;
         line-height: 40px;
-        margin-bottom: 30px
+        margin-bottom: 20px
     }
 }
 
@@ -881,11 +881,18 @@ header .intro .intro-heading {
     position: absolute;
     z-index: 1041;
     width: 100%;
-    height: 400px;
-    background: black;
-    -webkit-transform: translateY(-400px);
-    transform: translateY(-400px);
+    height: 85vh;
+    background: url(../img/pulldown.jpg);
+    -webkit-transform: translateY(-85vh);
+    transform: translateY(-85vh);
     -webkit-transition: all 0.3s;
+    background-repeat: none;
+    background-attachment: scroll;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 .sidebar-container.sidebar-active {
@@ -908,10 +915,10 @@ header .intro .intro-heading {
 .heading {
     z-index:3;
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
     font-weight: 700;
     font-size: 30px;
     line-height: 50px;
+    margin-top: 250px;
     margin-bottom: 25px;
     color: white;
 }
@@ -1069,7 +1076,7 @@ header .intro .intro-heading {
     background: transparent;
     border-color: white;
     transition: .3s;
-    font-size: 16px;
+    font-size: 15px;
     padding: 10px;
 }
 
@@ -1102,4 +1109,40 @@ header .intro .intro-heading {
 #howbutton {
     float: left;
 }
+
+#about {
+    margin-top: -70px;
+    /* background: url(../img/how.jpg);
+    background-repeat: none;
+    background-attachment: scroll;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover; */
+}
+
+section h3.section-subheading {
+    font-size: 16px;
+    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: none;
+    font-style: italic;
+    font-weight: 400;
+    margin-bottom: 40px;
+}
+/* 
+#services {
+    background: url(../img/services.jpg);
+    background-repeat: none;
+    background-attachment: scroll;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+} */
+
+.back-font {
+    font-size: 12px;
+    text-align: left;
 }
